--- a/index.html
+++ b/index.html
@@ -1,156 +1,114 @@
 <!DOCTYPE HTML>
-<!--
-	Fractal by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!-- Fractal by HTML5 UP html5up.net | @ajlkn Free for personal and commercial use under the CCA 3.0 license (html5up.net/license) -->
 <html>
-	<head>
-		<title>Ninex LLC</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-		<header id="header">
-			<div class="content">
-				<h1><a href="#">Ninex LLC</a></h1>
-				<p>Trade Smarter, Trade Safer;<br />
-					 A gateway to consistency in options trading </p>
-				</div>
-			</div>
-			<div class="image phone">
-				<div class="inner">
-					<img src="images/ChatgptLogo.png" alt="Ninex Logo" /> <!-- Image path updated -->
-				</div>
-			</div>
+<head>
+	<title>Ninex LLC</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" /> <noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload"> <!-- Header -->
+	<header id="header">
+		<div class="content">
+			<h1><a href="#">Ninex LLC</a></h1>
+			<p>Trade Smarter, Trade Safer;<br /> A gateway to consistency in options trading </p>
+		</div>
+		</div>
+		<div class="image phone">
+			<div class="inner"> <img src="images/New9x.png" alt="Ninex Logo" /> <!-- Image path updated --> </div>
+		</div>
+	</header> <!-- One: About Ninex -->
+	<section id="one" class="wrapper style2 special">
+		<header class="major">
+			<h2>About Ninex</h2>
+			<p> Ninex LLC is a small hedgefund with a focus on day-trading and the implementation of low-risk, <br />
+				consistently profitable strategies. Established as a formal business entity in December 2022, our
+				portfolio's <br /> roots extend back to March 2020. Through a diligent and strategic approach, we
+				reliably deliver growth and <br /> profitability to accounts under our management. Every trade is
+				meticulously calculated, with fixed risks <br /> and consistent short-term profits. </p>
 		</header>
-
-		<!-- One: About Ninex -->
-			<section id="one" class="wrapper style2 special">
-				<header class="major">
-					<h2>About Ninex</h2>
-                    <p>
-						Ninex LLC, headquartered in Westfield, New Jersey, is a small options-trading firm with a focus on day-trading <br />
-						and the implementation of low-risk, consistently profitable strategies. Established as a formal business entity <br />
-						in December 2022, our portfolio's roots extend back to March 2020. Through a diligent and strategic approach, <br />
-						we reliably deliver growth and profitability to accounts under our management. Every trade is meticulously <br />
-						calculated, a testament to our expertise and commitment to excellence in the dynamic world of options trading. <br />
-						In addition to core operations, Ninex takes pride in fostering financial literacy and skill development, offering <br />
-						guidance and resources for aspiring young traders. 
-					</p>
-				</header>
-				<!-- 
-				<ul class="icons major">
-					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
-					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
-				</ul>
-				--> 
-				<ul class="icons major">
-					<li><span class="icon solid fa-chart-line"><span class="label">Analyze</span></span></li>
-					<li><span class="icon solid fa-balance-scale"><span class="label">Balance</span></span></li>
-					<li><span class="icon solid fa-lightbulb"><span class="label">Innovate</span></span></li>
-				</ul>
-			</section>
-
-		<!-- Two: Services -->
-			<section id="two" class="wrapper">
-				<div class="inner alt">
-					<section class="spotlight">
-						<div class="image"><img src="images/Bedroom.png" alt="" /></div>
-						<div class="content">
-							<h3>Beginning</h3>
-							<p> The Ninex portfolio had humble beginnings, taking root in March 2020 within the confines of a bedroom. Armed with determination and a modest four-figure account, we began experimenting with 
-								basic trades. Through meticulous research, strategic decision-making, and a relentless pursuit of knowledge, 
-								a small-scale initiative was transformed into the foundation of what is now Ninex LLC. This
-								grassroots origin story reflects not only the entrepreneurial spirit of our team but also underscores the 
-								potential for growth within the trading world. </p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/DormRoom3.png" alt="" /></div>
-						<div class="content">
-							<h3>Expanding</h3>
-							<p> In December 2022, after growing the original investment by over 150%, Ninex was officially registered as an LLC. 
-								Through the first year of operations, being managed almost entirely by college students, Ninex's accounts more than tripled in value. 
-								May 2022 marked the placement of our first five-figure trade, highlighting the company's rapid growth and the efficacy of 
-								our approach to navigating the options market. </p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/Conference.png" alt="" /></div>
-						<div class="content">
-							<h3>Improving</h3>
-							<p>Ninex's progress thus far is a testament to the entrepreneurial acumen driving our journey in the dynamic realm of trading. 
-							   Ninex continues to achieve portfolio growth and expansion through a strategic mix of trading approaches, including credit 
-							   spreads, iron condors, and butterfly spreads. Our limited-risk, short-term strategies are meticulously executed to capitalize 
-							   on market movements while mitigating potential losses. The company remains agile, adapting to market conditions and refining
-							   our strategies based on real-time analysis. Ninex is continously working on the development of more sophisticated algorithms and 
-							   innovative strategies, incorporating quantitative models to enhance decision-making processes and further optimize trade execution.  </p>
-						</div>
-					</section>
-					<!-- 
-					<section class="special">
-						<ul class="icons labeled">
-							<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
-							<li><span class="icon solid fa-sync"><span class="label">Sed vehicula elementum</span></span></li>
-							<li><span class="icon solid fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
-							<li><span class="icon solid fa-code"><span class="label">Lorem nullam tempus</span></span></li>
-							<li><span class="icon solid fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
-						</ul>
-					</section>
-					-->
-					<section class="special">
-						<h3>Learn to Trade Options</h3>
-						<p>
-							Discover the keys to successful options trading with our concise 9-part course. Perfect for beginners and 
-							traders with small accounts, this course covers everything from basic trading strategies to advanced concepts like 
-							the Greeks, volatility, and butterfly spreads. Gain essential skills in understanding intrinsic/extrinsic 
-							value and derivatives. Join us to step confidently into the world of options trading and elevate your trading
-							expertise.
-						<p>
-							<button type="button" style="background-color: #ffffff; color: white;">Coming Soon!</button>
-					</section>				
+		<!-- <ul class="icons major"> <li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li> <li><span class="icon solid fa-sync"><span class="label">Process</span></span></li> <li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li> </ul> -->
+		<ul class="icons major">
+			<li><span class="icon solid fa-chart-line"><span class="label">Analyze</span></span></li>
+			<li><span class="icon solid fa-balance-scale"><span class="label">Balance</span></span></li>
+			<li><span class="icon solid fa-lightbulb"><span class="label">Innovate</span></span></li>
+		</ul>
+	</section> <!-- Two: Services -->
+	<section id="two" class="wrapper">
+		<div class="inner alt">
+			<section class="spotlight">
+				<div class="image"><img src="images/Bedroom.png" alt="" /></div>
+				<div class="content">
+					<h3>Beginning</h3>
+					<p> The Ninex portfolio had humble beginnings, emerging as a sub $1000 account in March 2020.
+						Through tedious research, consistency, and a series of trial and error, the account started to
+						grow. Although gains at first were minimal, with most trades not even breaking $100, profits
+						were consistent and stress was tolerable. Returning roughly 300% over the course of two years, a
+						small-scale initiative was transformed into the foundation of what is now Ninex LLC. </p>
 				</div>
 			</section>
-
-		<!-- Three: Contact -->
-			<section id="three" class="wrapper style2 special">
-				<header class="major">
-					<h3>Contact us</h3>
-					<p>CEO and Head Trader: Jonathan Schaeffer <br />
-					Email: jmschaeffer30@gmail <br />
-					Phone: 908-400-7238 <br />
-					Main office: 220 Lennox Ave, Westfield NJ
-					</p>
-				</header>
-				<ul class="actions special">
-					<li><a href="https://www.linkedin.com/in/j-schaeffer/" class="button primary icon solid fa-paperclip">LinkedIn</a></li>
-					<li><a href="https://app.joinhandshake.com/stu/users/41707569" class="button button-green icon solid fa-paperclip">Handshake</a></li>
-				</ul>
+			<section class="spotlight">
+				<div class="image"><img src="images/DormRoom3.png" alt="" /></div>
+				<div class="content">
+					<h3>Expanding</h3>
+					<p> In December 2022, after the original investment had accumulated real value, Ninex was officially
+						registered as an LLC. Through the first year of operations, Ninex recieved $20,000+ from
+						investors. From January 2023 to December 2023, our accounts returned a total of 283%. </p>
+				</div>
 			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/Conference.png" alt="" /></div>
+				<div class="content">
+					<h3>Improving</h3>
+					<p> Ninex's progress thus far is a testament to the entrepreneurial acumen which this company was
+						built on. As we continue to grow, new opportunities arise and improvements are constantly being
+						made. Not only are we on track for another profitable year, but we are also providing a way for
+						aspiring traders to produce similar results. </p>
+				</div>
+			</section>
+			<!-- <section class="special"> <ul class="icons labeled"> <li><span class="icon solid fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li> <li><span class="icon solid fa-sync"><span class="label">Sed vehicula elementum</span></span></li> <li><span class="icon solid fa-cloud"><span class="label">Elit fusce consequat</span></span></li> <li><span class="icon solid fa-code"><span class="label">Lorem nullam tempus</span></span></li> <li><span class="icon solid fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li> </ul> </section> -->
+			<section class="special">
+				<h3>Learn to Trade Options</h3>
+				<p> Discover the keys to successful options trading with our concise 10-hour course. Perfect for
+					beginners and traders with small accounts, this course covers everything from basic trading
+					strategies to advanced concepts like the Greeks, volatility, and butterfly spreads. Gain essential
+					skills in understanding intrinsic/extrinsic value and derivatives. Join us to step confidently into
+					the world of options trading and elevate your trading expertise.
+				<p> <button type="button" style="background-color: #ffffff; color: white;">Coming Soon!</button>
+			</section>
+		</div>
+	</section> <!-- Three: Contact -->
+	<section id="three" class="wrapper style2 special">
+		<header class="major">
+			<h3>Contact us</h3>
+			<p>CEO and Head Trader: Jonathan Schaeffer <br /> Email: jmschaeffer30@gmail <br /> Phone: 908-400-7238
+				<br /> </p>
+		</header>
+		<ul class="actions special">
+			<li><a href="https://www.linkedin.com/in/j-schaeffer/"
+					class="button primary icon solid fa-paperclip">LinkedIn</a></li>
+			<li><a href="https://app.joinhandshake.com/stu/users/41707569"
+					class="button primary icon solid fa-paperclip">Handshake </a></li>
+		</ul>
+	</section> <!-- Footer -->
+	<footer id="footer">
+		<ul class="icons">
+			<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+		</ul>
+		<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+	</footer> <!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+</body>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
 </html>
